Fix HTMLPreloadScanner handling of type in link preload.

Handling of the `type` attribute in `<link rel=preload>` was not
properly added, which meant preloads that included a valid type were
dismissed due to rel=stylesheet related logic.

This CL adds proper handling for the `type` attribute in
`<link rel=preload>` for fonts, images and styles.

BUG=659640

Review-Url: https://codereview.chromium.org/2620993002
Cr-Commit-Position: refs/heads/master@{#442887}

Former-commit-id: 5b86dfe66171ac6b9641ea596c74369e515de917